<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_usuario"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:background="#2C016A"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_usuario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/user"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintLeft_toRightOf="@id/img_logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_nomeCompleto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/user_nome"
            android:textColor="@color/white"
            android:textSize="22dp"
            app:layout_constraintLeft_toRightOf="@id/img_logo"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_usuario" />

        <TextView
            android:id="@+id/tv_alterarDados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/alterar_dados"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_logout" />

        <TextView
            android:id="@+id/tv_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/logout"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintLeft_toRightOf="@id/tv_alterarDados"
            app:layout_constraintRight_toRightOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_infos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraint_usuario">

        <ImageView
            android:id="@+id/img_email"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="18dp"
            android:src="@drawable/ic_email"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/tv_emailCompleto"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_emailCompleto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/email_completo"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintLeft_toRightOf="@id/img_email"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_email" />

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintLeft_toRightOf="@id/img_email"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_emailCompleto" />

        <ImageView
            android:id="@+id/img_cpf"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_cpfCompleto"
            app:layout_constraintTop_toBottomOf="@id/img_email"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_cpfCompleto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/cpf_completo"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintLeft_toRightOf="@id/img_cpf"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_cpf" />

        <TextView
            android:id="@+id/tv_cpf"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/cpf"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintLeft_toRightOf="@id/img_cpf"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_cpfCompleto" />

        <ImageView
            android:id="@+id/img_telefone"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_phone"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_telefoneCompleto"
            app:layout_constraintTop_toBottomOf="@id/img_cpf"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_telefoneCompleto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/telefone_completo"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintLeft_toRightOf="@id/img_telefone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_telefone" />

        <TextView
            android:id="@+id/tv_telefone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/telefone"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintLeft_toRightOf="@id/img_telefone"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_telefoneCompleto" />


        <ImageView
            android:id="@+id/img_nascimento"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_calendar"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/tv_nascimentoCompleto"
            app:layout_constraintTop_toBottomOf="@id/img_telefone"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_nascimentoCompleto"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/nascimento_completo"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintLeft_toRightOf="@id/img_nascimento"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_nascimento" />

        <TextView
            android:id="@+id/tv_nascimento"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/nascimento"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintLeft_toRightOf="@id/img_nascimento"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_nascimentoCompleto" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white"
            />

    <ImageView
        android:id="@+id/img_versao"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_code"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view"
        app:tint="@color/white" />

        <TextView
            android:id="@+id/tv_versaoCompleta"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/version"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintLeft_toRightOf="@id/img_versao"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/img_versao" />

        <TextView
            android:id="@+id/tv_versao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:text="@string/versao_app"
            android:textColor="@color/white"
            android:textSize="14dp"
            app:layout_constraintLeft_toRightOf="@id/img_versao"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_versaoCompleta" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>